--- a/src/styles/components/PricingSection.css
+++ b/src/styles/components/PricingSection.css
@@ -99,7 +99,7 @@
 }
 
 .pricing-card {
-  border-radius: 1rem;
+  border-radius: 30px;
   padding: 2rem;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -247,7 +247,7 @@
 .pricing-card-button {
   width: 100%;
   padding: 0.75rem 2rem;
-  border-radius: 1rem;
+  border-radius: 30px;
   font-weight: 500;
   background-color: var(--bg-primary);
   color: var(--text-primary);
